Fix treebeard modal covering navigation

--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -544,3 +544,8 @@ button.close {
 .alert.growl-animated {
     padding-right: 35px; /* work as alert-dismissable in bootstrap */
 }
+
+.tb-modal-shade {
+    /*  Override z-index here to avoid clashing with navigation elements */
+    z-index: 98 !important;
+}
